Adjustment controllers and entities to obey role application