@@ -1,6 +1,6 @@
 package com.example.portalpartners.controller;
 
-import com.example.portalpartners.dto.CreateDocumento;
+import com.example.portalpartners.dto.CreateDocumentoRequest;
 import com.example.portalpartners.dto.DocumentoResponse;
 import com.example.portalpartners.model.Documento;
 import com.example.portalpartners.model.TipoDocumento;
@@ -15,7 +15,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @RestController
@@ -26,16 +25,39 @@ public class DocumentoController {
     private final MinioService minioService;
     private final DocumentoService documentoService;
 
+    private DocumentoResponse toResponse(Documento d) {
+        DocumentoResponse dto = new DocumentoResponse();
+        dto.setId(d.getId());
+        dto.setTipoDocumento(d.getTipoDocumento());
+        dto.setNomeArquivo(d.getNomeArquivo());
+        dto.setStatusDocumento(d.getStatusDocumento());
+        dto.setDataPostagem(d.getDataPostagem());
+
+        dto.setContratadaNome(
+                d.getContratada() != null ? d.getContratada().getNome() : null
+        );
+
+        dto.setFuncionarioNome(
+                d.getFuncionario() != null ? d.getFuncionario().getNomeCompleto() : null
+        );
+
+        return dto;
+    }
+
     @GetMapping
-    public Page<Documento> listarPaginado(@RequestParam(defaultValue = "0") int page,
+    public Page<DocumentoResponse> listarPaginado(@RequestParam(defaultValue = "0") int page,
                                           @RequestParam(defaultValue = "10") int size) {
-        Pageable pageable = PageRequest.of(page, size);
-        return documentoRepository.findAll(pageable);
+        Page<Documento> documentos = documentoRepository.findAll(PageRequest.of(page, size));
+
+        return documentos.map(this::toResponse);
     }
 
     @GetMapping("/ultimos")
-    public List<Documento> ultimos10() {
-        return documentoRepository.findTop10ByOrderByDataPostagemDesc();
+    public List<DocumentoResponse> ultimos10() {
+        return documentoRepository.findTop10ByOrderByDataPostagemDesc()
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @PostMapping
@@ -44,76 +66,48 @@ public class DocumentoController {
     }
 
     @PostMapping("/upload")
-    public ResponseEntity<DocumentoResponse> uploadDocumento(@ModelAttribute CreateDocumento dto) {
+    public ResponseEntity<DocumentoResponse> uploadDocumento(@ModelAttribute CreateDocumentoRequest dto) {
         Documento documento = documentoService.uploadDocumento(dto);
         DocumentoResponse response = new DocumentoResponse();
         response.setId(documento.getId());
         response.setTipoDocumento(documento.getTipoDocumento());
+        response.setStatusDocumento(documento.getStatusDocumento());
         response.setNomeArquivo(documento.getNomeArquivo());
-        response.setStatus(documento.getStatusDocumento());
         response.setDataPostagem(documento.getDataPostagem());
-        response.setContratadaId(dto.getContratadaId());
-        response.setFuncionarioId(dto.getFuncionarioId());
+        response.setContratadaNome(documento.getContratada().getNome());
+        response.setFuncionarioNome(documento.getFuncionario().getNomeCompleto());
 
         return ResponseEntity.ok(response);
     }
 
-    @GetMapping("/contratada/{contratadaId}")
-    public ResponseEntity<List<DocumentoResponse>> listarPorContratada(@PathVariable Long contratadaId) {
-        List<Documento> documentos = documentoService.findByContratadaUuid(contratadaId);
-        List<DocumentoResponse> dtos = documentos.stream()
-                .map(d -> {
-                    DocumentoResponse dto = new DocumentoResponse();
-                    dto.setId(d.getId());
-                    dto.setTipoDocumento(d.getTipoDocumento());
-                    dto.setNomeArquivo(d.getNomeArquivo());
-                    dto.setStatus(d.getStatusDocumento());
-                    dto.setDataPostagem(d.getDataPostagem());
-                    dto.setContratadaId(d.getContratada() != null ? d.getContratada().getId() : null);
-                    dto.setFuncionarioId(d.getFuncionario() != null ? d.getFuncionario().getId() : null);
-                    return dto;
-                })
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+    @GetMapping("/contratada/{nome}")
+    public List<DocumentoResponse> listarPorContratada(@PathVariable String nome) {
+        return documentoService.findByContratadaNome(nome)
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
-    @GetMapping("/funcionario/{funcionarioId}")
-    public ResponseEntity<List<DocumentoResponse>> listarPorFuncionario(@PathVariable Long funcionarioId) {
-        List<Documento> documentos = documentoService.findByFuncionarioId(funcionarioId);
-        List<DocumentoResponse> dtos = documentos.stream()
-                .map(d -> {
-                    DocumentoResponse dto = new DocumentoResponse();
-                    dto.setId(d.getId());
-                    dto.setTipoDocumento(d.getTipoDocumento());
-                    dto.setNomeArquivo(d.getNomeArquivo());
-                    dto.setStatus(d.getStatusDocumento());
-                    dto.setDataPostagem(d.getDataPostagem());
-                    dto.setContratadaId(d.getContratada() != null ? d.getContratada().getId() : null);
-                    dto.setFuncionarioId(d.getFuncionario() != null ? d.getFuncionario().getId() : null);
-                    return dto;
-                })
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+    @GetMapping("/funcionario/nome/{funcionarioNome}")
+    public Page<DocumentoResponse> listarPorFuncionario(
+            @PathVariable String nome,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size) {
+        Page<Documento> pageEntity =
+                documentoService.findByFuncionarioNomeContainingIgnoreCase(
+                        nome, PageRequest.of(page, size));
+
+        return pageEntity.map(this::toResponse);
     }
 
-    @GetMapping("/contratada/{contratadaId}/tipo/{tipo}")
-    public ResponseEntity<List<DocumentoResponse>> filtrarPorTipoEmpresa(
-            @PathVariable Long contratadaId,
+    @GetMapping("/contratada/{contratadaNome}/tipo/{tipo}")
+    public List<DocumentoResponse> filtrarPorTipoEmpresa(
+            @PathVariable String contratadaNome,
             @PathVariable TipoDocumento tipo) {
-        List<Documento> documentos = documentoService.findByContratadaIdAndTipo(contratadaId, String.valueOf(tipo));
-        List<DocumentoResponse> dtos = documentos.stream()
-                .map(d -> {
-                    DocumentoResponse dto = new DocumentoResponse();
-                    dto.setId(d.getId());
-                    dto.setTipoDocumento(d.getTipoDocumento());
-                    dto.setNomeArquivo(d.getNomeArquivo());
-                    dto.setStatus(d.getStatusDocumento());
-                    dto.setDataPostagem(d.getDataPostagem());
-                    dto.setContratadaId(d.getContratada() != null ? d.getContratada().getId() : null);
-                    dto.setFuncionarioId(d.getFuncionario() != null ? d.getFuncionario().getId() : null);
-                    return dto;
-                })
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+
+        return documentoService.findByContratadaNomeAndTipo(contratadaNome, tipo)
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 }
